fix text alignment

--- a/style/05-layouts/_l-section.scss
+++ b/style/05-layouts/_l-section.scss
@@ -41,6 +41,8 @@
 
     &__title {
         display: flex;
+        align-items: center;
+        justify-content: center;
         width: 80%;
         // width: auto;
         text-align: center;
